fix website link

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <i>Digitr is a digital student hallway pass app that provides a smart, simple, scalable and convenient way of managing student passes.</i>
             <br><br>
             <ul>
-                <li><a href="digitrwriteup.pdf">Technical Writeup</a></li>
-                <li>Source Code <a href="https://github.com/eado/Digitr">(frontend)</a> <a href="https://github.com/eado/DigitrBackend">(backend)</a></li>
-                <li><a href="http://digitrapp.com">Website</a></li>
+                <li><a href="digitrwriteup.pdf"><b>Technical Writeup</b></a></li>
+                <li><b>Source Code <a href="https://github.com/eado/Digitr">(frontend)</a> <a href="https://github.com/eado/DigitrBackend">(backend)</a></b></li>
+                <li><a href="https://app.digitrapp.com"><b>Live App</b></a></li>
+                <li><a href="https://www.mpassapp.com/about">Website</a></li>
                 <li><a href="https://www.mpassapp.com/video">Video Demo</a></li>
                 <li><a href="https://apps.apple.com/us/app/digitr/id1434334094">iOS App Store</a></li>
             </ul>
