add tutorial to cupcake

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                 <li><a href="https://youtu.be/vQlizTr3UGQ">Research Overview Video (over 2 minutes long)</li>
             </ul>
         </li>
+        <li>
+            <h3>Cupcake</h3>
+            <i>Cupcake: A simplistic game</i>
+            <br><br>
+            <ul>
+                <li><a href="https://github.com/eado/Cupcake-WWDC">Source Code</a></li>
+                <li><a href="https://omarelamri.me/cupcake-guide/">Guide</a></li>
+                <li><a href="TutorialFull.mov">Video Demo</li>
+            </ul>
+        </li>
     </ul>
 </body>
 </html>
